[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.6.0", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
dirs = "6.0.0"
tauri-plugin-dialog = "2"
font-kit = "0.14.3"
tokio = { version = "1.0", features = ["process", "io-util", "rt-multi-thread"] }
regex = "1.0"
lazy_static = "1.4"
md5 = "0.7"
image = "0.24"
discord-rich-presence = "0.2"
